// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`findSat.bottomMenuClick 0 1`] = `[Function]`;

exports[`findSat.bottomMenuClick 2 1`] = `undefined`;

exports[`findSat.bottomMenuClick 5 1`] = `undefined`;

exports[`findSat.checkAz 0 1`] = `
Array [
  Object {
    "az": 0,
  },
  Object {
    "az": 50,
  },
]
`;

exports[`findSat.checkEl 0 1`] = `
Array [
  Object {
    "el": 0,
  },
  Object {
    "el": 50,
  },
]
`;

exports[`findSat.checkInc 0 1`] = `
Array [
  Object {
    "inclination": 0,
  },
]
`;

exports[`findSat.checkInview 0 1`] = `
Array [
  Object {
    "inView": 50,
  },
]
`;

exports[`findSat.checkObjtype 0 1`] = `
Array [
  Object {
    "type": 1,
  },
]
`;

exports[`findSat.checkPeriod 0 1`] = `Array []`;

exports[`findSat.checkRange 0 1`] = `
Array [
  Object {
    "rng": 0,
  },
  Object {
    "rng": 50,
  },
]
`;

exports[`findSat.checkRcs 0 1`] = `Array []`;

exports[`findSat.findByLooksSubmit 0 1`] = `undefined`;

exports[`findSat.hideSideMenus 0 1`] = `undefined`;

exports[`findSat.init 0 1`] = `undefined`;

exports[`findSat.searchSats 0 1`] = `Array []`;

exports[`findSat.uiManagerInit 0 1`] = `undefined`;
